Add text to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,8 +9,9 @@
 <body>
 	<div class = "main-content">
 		{{>header}}
+		<p>This site is created by Shanu Tyagi. It uses data from mapbox.com and darksky.net</p>
 		<img class = 'portrait' src = "/img/me.jpg">
-		<p>Created by {{name}}</p>
+		
 	</div>
 	
 	{{>footer}}
